<resources>
    <string name="app_name">FileProcess</string>
    <string name="handle_pdf">Handle PDF</string>
    <string name="handle_image">Handle Image</string>
    <string name="handle_video">Handle Video</string>
    <string name="web_view">Web View</string>
    <string name="asset">Asset</string>
    <string name="storage">Storage</string>
    <string name="internet">Internet</string>
    <string name="pick_image">Pick Image</string>
</resources>