<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".handlepdf.HandlePdfActivity">

    <Button
        android:id="@+id/btn_webview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/web_view"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/btn_asset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/asset"
        android:textAllCaps="false"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/btn_storage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/storage"
        android:textAllCaps="false"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/btn_internet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/internet"
        android:textAllCaps="false"
        android:textSize="20sp"
        />

</LinearLayout>